# ddd-haskell

./: .gitignore  CONVERSION_SUMMARY.md  README.md  order-taking.cabal
app/: Main.hs
src/OrderTaking/: Result.hs  Undefined.hs
src/OrderTaking/Common/: CompoundTypes.hs  ConstrainedTypes.hs  SimpleTypes.hs
src/OrderTaking/PlaceOrder/: Api.hs  Dto.hs  Implementation.hs  InternalTypes.hs  Pricing.hs  PublicTypes.hs
src/Payment/: Persistence.hs  Undefined.hs
